<resources>
    <string name="app_name">Navigation_Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">My Appointments</string>
    <string name="menu_slideshow">Schedule</string>
    <string name="menu_recent">Account</string>
    <string name="menu_offline">Offline</string>
    <string name="menu_uploads">Uploads</string>
    <string name="menu_backups">Backups</string>
</resources>