<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_backups"
        android:name="com.example.navigation_drawer.ui.backups.BackupFragment"
        android:label="@string/menu_backups"
        tools:layout="@layout/fragment_backup" />
    <fragment
        android:id="@+id/nav_recent"
        android:name="com.example.navigation_drawer.ui.recent.RecentFragment"
        android:label="@string/menu_recent"
        tools:layout="@layout/fragment_recent" />
    <fragment
        android:id="@+id/nav_offline"
        android:name="com.example.navigation_drawer.ui.offline.OfflineFragment"
        android:label="@string/menu_offline"
        tools:layout="@layout/fragment_offline" />
    <fragment
        android:id="@+id/nav_uploads"
        android:name="com.example.navigation_drawer.ui.uploads.UploadFragment"
        android:label="@string/menu_uploads"
        tools:layout="@layout/fragment_upload" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navigation_drawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.navigation_drawer.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.navigation_drawer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>